<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLogin_background">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_contact_profile_picture" />

    <LinearLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/layout_margin"
        android:orientation="vertical">

        <com.example.zhang.relationshipManager.activities.TextInputLayoutFixedErrorSpace
            android:id="@+id/textInputLayout_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editText_margin_bottom">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_phoneNumber"
                android:inputType="textPhonetic" />
        </com.example.zhang.relationshipManager.activities.TextInputLayoutFixedErrorSpace>

        <com.example.zhang.relationshipManager.activities.TextInputLayoutFixedErrorSpace
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editText_margin_bottom">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_password"
                android:inputType="textPassword" />
        </com.example.zhang.relationshipManager.activities.TextInputLayoutFixedErrorSpace>

        <com.example.zhang.relationshipManager.activities.TextInputLayoutFixedErrorSpace
            android:id="@+id/textInputLayout_confirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editText_margin_bottom"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_confirmPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_confirmPwd"
                android:inputType="textPassword" />
        </com.example.zhang.relationshipManager.activities.TextInputLayoutFixedErrorSpace>
    </LinearLayout>

    <LinearLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/editText_margin_bottom"
            android:background="@color/colorPrimary"
            android:text="@string/action_register"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/editText_margin_bottom"
            android:background="@color/color_light_text_background"
            android:text="@string/action_unlock"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/switchToRegister"
            android:textAlignment="center"/>
    </LinearLayout>
</RelativeLayout>