<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerInParent="true"
        android:text="@string/search"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_mono"
                android:paddingEnd="5dp"
                android:text="@string/contact_1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_contact_from"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:fontFamily="@font/roboto_mono"
                android:paddingEnd="5dp"
                android:text="@string/contact_2"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_contact_to"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>